--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <p>hello suchit</p>
+    <p>hello suchit</p>
+
 </head>
 <body>
     
